manifests/inite-deployment2.yaml
# An example of a Kubernetes configuration for pod deployment.
apiVersion: apps/v1
kind: Deployment
metadata:
  # Cluster name.
  name: ignite-cluster
  namespace: default
spec:
  # The initial number of pods to be started by Kubernetes.
  replicas: 2
  selector:
    matchLabels:
      app: ignite
  template:
    metadata:
      labels:
        app: ignite
    spec:
      serviceAccountName: ignite
      terminationGracePeriodSeconds: 60000

      containers:
        # Custom pod name.
        - name: ignite-node
          image: apacheignite/ignite:2.13.0
          ports:
            # Ports to open.
            - containerPort: 47100 # communication SPI port
            - containerPort: 47500 # discovery SPI port
            - containerPort: 49112 # dafault JMX port
            - containerPort: 10800 # thin clients/JDBC driver port
            - containerPort: 8080 # REST API
          volumeMounts:
            - mountPath: /ignite/config
              name: config-vol
            - mountPath: /ignite/log
              name: log-config-vol
            - mountPath: /etc/truststore
              name: trust-store-vol
            - mountPath: /etc/keystore
              name: key-store-vol
            - mountPath: /etc/certs
              name: certificate-volume

      volumes:
        - name: config-vol
          configMap:
            name: ignite-config
        - name: log-config-vol
          configMap:
            name: ignite-log-config
        - name: trust-store-vol
          secret:
            secretName: trust-store-secret
        - name: key-store-vol
          secret:
            secretName: key-store-secret
        - name: certificate-volume
          secret:
            secretName: ssl-certificate
