manifests/ignite-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ignite-service
  namespace: default
spec:
  clusterIP: None
  selector:
    app: ignite
  ports:
    - name: spi-port
      port: 47500
      targetPort: 47500
    - name: rest-port
      port: 8080
      targetPort: 8080
    - name: jmx-port
      port: 49112
      targetPort: 49112
