manifests/ignite-user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ignite-user-service
  labels:
    app: ignite
    service: user-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
      nodePort: 30085
  selector:
    app: ignite
    service: user-service
